<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quizapp.MainActivity"
    android:background="@drawable/image4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextStyle"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1ans1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q1option1"/>

            <RadioButton
                android:id="@+id/q1ans2"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q1option2"/>

            <RadioButton
                android:id="@+id/q1ans3"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q1option3"/>

            <RadioButton
                android:id="@+id/q1ans4"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q1option4"/>

        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextStyle"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/radioGroup2"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2ans1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q2option1"/>

            <RadioButton
                android:id="@+id/q2ans2"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q2option2"/>

            <RadioButton
                android:id="@+id/q2ans3"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q2option3"/>

            <RadioButton
                android:id="@+id/q2ans4"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q2option4"/>
        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextStyle"
            android:text="@string/question3" />

        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/radioGroup3"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q3ans1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q3option1"/>

            <RadioButton
                android:id="@+id/q3ans2"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q3option2"/>

            <RadioButton
                android:id="@+id/q3ans3"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q3option3"/>

            <RadioButton
                android:id="@+id/q3ans4"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q3option4"/>
        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextStyle"
            android:text="@string/question4" />

        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/radioGroup4"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q4ans1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q4option1"/>

            <RadioButton
                android:id="@+id/q4ans2"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q4option2"/>

            <RadioButton
                android:id="@+id/q4ans3"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q4option3"/>

            <RadioButton
                android:id="@+id/q4ans4"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q4option4"/>

        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextStyle"
            android:text="@string/question5" />

        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/radioGroup5"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q5ans1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q5option1"/>

            <RadioButton
                android:id="@+id/q5ans2"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q5option2"/>

            <RadioButton
                android:id="@+id/q5ans3"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q5option3"/>

            <RadioButton
                android:id="@+id/q5ans4"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/q5option4"/>
        </RadioGroup>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/save_btn_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saveBtnString"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/submit_btn_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submitBtnString"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>